<resources>
    <string name="app_name">MNC</string>
    <string name="new_version">最新版本%s</string>
    <string name="my_city">元宇星球</string>
    <string name="nike_name">昵稱：</string>
    <string name="good_cityer">元宇積分：</string>
    <string name="farm">元宇宙</string>
    <string name="task">任務</string>
    <string name="digital_cityer_auth">數字市民申請</string>
    <string name="go_into_alaer">走進元宇宙</string>
    <string name="regist">注册</string>
    <string name="login">登入</string>
    <string name="enter">進入</string>
    <string name="welcome_to_digital_alaer">歡迎來到元宇宙</string>
    <string name="account_3D_login_directly">3D視界用戶可直接帳號登入</string>
    <string name="phone_no">手機號碼</string>
    <string name="pls_input_phone">請輸入手機號碼</string>
    <string name="pls_input_valid_phone">請輸入正確的手機號</string>
    <string name="password">密碼</string>
    <string name="pls_input_pwd_short">請輸入密碼</string>
    <string name="pls_input_pwd">至少由字母+數字組成，長度8-16位</string>
    <string name="regist_account">申請</string>
    <string name="forget_pwd">忘記密碼</string>
    <string name="apply">申請</string>
    <string name="pls_input_verify_code">請輸入驗證碼</string>
    <string name="send">發送</string>
    <string name="next_step">下一步</string>
    <string name="has_account">已有帳號？</string>
    <string name="login_now">立即進入</string>
    <string name="input_pwd">輸入密碼</string>
    <string name="confirm_pwd">確認密碼</string>
    <string name="pls_input_login_pwd">請輸入登入密碼</string>
    <string name="pls_input_pwd_again">請再次輸入密碼</string>
    <string name="pls_input_invitate_code">請輸入邀請碼</string>
    <string name="reset_pwd">重置密碼</string>
    <string name="mail">郵箱</string>
    <string name="pls_input_mail">請輸入郵箱</string>
    <string name="mail_verify_code">郵箱驗證碼</string>
    <string name="pls_input_mail_verify_code">請輸入郵箱驗證碼</string>
    <string name="confirm">確定</string>
    <string name="vierify_code">驗證碼</string>
    <string name="pwd_not_same">兩次輸入的密碼不同，請正確輸入！</string>
    <string name="verify_code_send_ok">驗證碼發送成功</string>
    <string name="regist_success">恭喜您，註冊成功！</string>
    <string name="reset_pwd_success">密碼修改成功！</string>
    <string name="use_mean_agree">登入/申請即代表您同意</string>
    <string name="alaer_agreement">元宇宙使用者協定、隱私政策</string>
    <string name="pwd_invalid">密碼至少由字母+數字組成，8-16位</string>
    <string name="produce_base">生產基地</string>
    <string name="produce_hall">我的元宇宙</string>
    <string name="produce_base_with_arrow">生產基地&gt;</string>
    <string name="fertilize">啟動探測</string>
    <string name="water">輸入激光</string>
    <string name="amount_add">+%s</string>
    <string name="amount_reduce">-%s</string>
    <string name="disinsection">發現礦石</string>
    <string name="reap">收穫礦石</string>
    <string name="speed_up">加速</string>
    <string name="seed_store">元宇宙商店</string>
    <string name="time_remain">剩餘%s</string>
    <string name="pls_produce_tomorrow">請明天繼續</string>
    <string name="seed_try">新手探測器</string>
    <string name="seed_ginkgo">杏樹</string>
    <string name="seed_pear">梨樹</string>
    <string name="seed_grape">葡萄樹</string>
    <string name="seed_apple">蘋果樹</string>
    <string name="seed_jujube">棗樹</string>
    <string name="grow_days_is">探测天數：%d天</string>
    <string name="yield_is">產量：%d元宇礦</string>
    <string name="start_time_is">開始時間：%s</string>
    <string name="end_time_is">結束時間：%s</string>
    <string name="remaing_days_is">剩餘天數：%d天</string>
    <string name="expired">過期失效</string>
    <string name="seed_getted">已領取</string>
    <string name="price_is_get_by_auth">兌換價格：實名認證贈送</string>
    <string name="price_is">兌換價格：%d元宇礦</string>
    <string name="reward_activity_is">獎勵活躍度：%d</string>
    <string name="cultivation_time_is">採探時長：%s</string>
    <string name="cultivation_days_is">採探天數：%d天</string>
    <string name="has_exchanged_is">已兌換：%d/%d</string>
    <string name="exchanged_full">兌換完</string>
    <string name="get_for_free">免費領取</string>
    <string name="renewal">續期</string>
    <string name="get_by_start_user">星級團隊贈送</string>
    <string name="get_by_activity">活動贈送</string>
    <string name="has_get_try_seed">抱歉，您已領取過新手探測器！</string>
    <string name="seed_sold_out_all">抱歉，已被兌換完！</string>
    <string name="look_my_seeds">查看我的探測器</string>
    <string name="cancel">取消</string>
    <string name="seed_buyed_is">您已兌換一臺探測器：%s</string>
    <string name="seed_buy_success">兌換探測器成功</string>
    <string name="seed_get_success">領取探測器成功</string>
    <string name="not_auth_yes">您尚未實名，請先進行實名認證！</string>
    <string name="goto_auth">前往認證</string>
    <string name="confirm_pay_success_or_not">請確認是否是在支付寶中完成支付？</string>
    <string name="pay_confirm">支付確認</string>
    <string name="info_confirm">支付確認</string>
    <string name="pls_confirm_info_is_correct">請確認以下資訊是否正確：</string>
    <string name="name_is">姓名：%s</string>
    <string name="card_no_is">證件號：%s</string>
    <string name="alipay_info_confirm">準備前往支付寶進行支付，請確保支付寶帳號身份資訊與以上資訊一致，否則無法支付成功。</string>
    <string name="auth_pay_failed">您的訂單支付失敗!</string>
    <string name="leisure_hall">休閒大廳</string>
    <string name="music">音樂</string>
    <string name="shot_video">短視頻</string>
    <string name="film">電影</string>
    <string name="novel">小說</string>
    <string name="game_hall">遊戲大廳</string>
    <string name="classic_game">經典遊戲</string>
    <string name="h5_game">H5小游戏</string>
    <string name="more">更多</string>
    <string name="education_hall">元宇宙大學</string>
    <string name="compulsory_education">義務教育</string>
    <string name="online_education">元宇宙線上資料</string>
    <string name="education_video">元宇宙視頻</string>
    <string name="career_traning">元宇宙生態整合</string>
    <string name="people_hospital">平行宇宙</string>
    <string name="appointment">預約掛號</string>
    <string name="appointment_without_queuing">線上預約不排隊</string>
    <string name="fill_case_history">病例史檔案填寫</string>
    <string name="upload_case_history">病例史檔案上傳</string>
    <string name="digital_mall">數位商城</string>
    <string name="online_well_goods">線上優質商品上架</string>
    <string name="go_exchange_goods">前往兑换</string>
    <string name="goods_exchange">商品兌換</string>
    <string name="government_hall">數字會員申請</string>
    <string name="real_name_auth">實名認證</string>
    <string name="make_sure_security_warning">為保證您的賬號安全，提升服務品質，請前往認證</string>
    <string name="auth_success">恭喜您，實名認證已完成</string>
    <string name="share_now">立即分享</string>
    <string name="travel_hall">元宇宙中心</string>
    <string name="alaer_travel_video">元宇宙數字生態宣傳片</string>
    <string name="travel_ticket">進入元宇宙數字生態</string>
    <string name="alipay_auth">支付寶認證</string>
    <string name="card_auth">卡認證</string>
    <string name="mine">我的</string>
    <string name="contribution_value">貢獻值：%s</string>
    <string name="total_assets">總資產：（元）</string>
    <string name="fruit">元宇礦WMNC</string>
    <string name="build_integral">元宇積分MNC</string>
    <string name="mnc_unit">元宇積分</string>
    <string name="build_integral_detail">元宇積分MNC明細</string>
    <string name="sapling_activity">探測器活躍度</string>
    <string name="share_activity">分享活躍度</string>
    <string name="my_share">我的分享</string>
    <string name="my_partner">我的團隊</string>
    <string name="invitation_code">邀請碼</string>
    <string name="wechat">Telegram</string>
    <string name="security_center">安全中心</string>
    <string name="customer_service">客服</string>
    <string name="about">關於</string>
    <string name="discover">發現</string>
    <string name="beginner_guide">新手指南</string>
    <string name="my_team">我的團隊</string>
    <string name="invitate_friend">邀請好友</string>
    <string name="build_guide">探索指南</string>
    <string name="promotion_guide">推廣指南</string>
    <string name="invitees">邀請人</string>
    <string name="operation_guide">操作引導</string>
    <string name="common_problem">常見問題</string>
    <string name="level_rule">等級規則</string>
    <string name="user_info">用戶信息</string>
    <string name="uid">UID</string>
    <string name="nike">昵稱</string>
    <string name="wechat_no">Telegram號</string>
    <string name="not_bind">未綁定</string>
    <string name="wechat_no_set">Telegram用戶名設置</string>
    <string name="wechat_no_set_warning">Telegram用戶名設置後，您的邀請人可查看。</string>
    <string name="pls_input_wechat_no">請輸入Telegram用戶名</string>
    <string name="wechat_no_modify_warning">修改Telegram號將消耗1元宇礦石，請謹慎設定</string>
    <string name="submit">提交</string>
    <string name="active_detail">活躍度明細</string>
    <string name="sapling">元宇礦</string>
    <string name="share">分享</string>
    <string name="all">全部</string>
    <string name="exchange">兌換</string>
    <string name="give_away">贈送</string>
    <string name="sapling_activity_is">探測器活躍度：%s</string>
    <string name="share_activity_is">分享活躍度：%s</string>
    <string name="fruit_bill">元宇礦WMNC明細</string>
    <string name="total">總計</string>
    <string name="available">可用</string>
    <string name="income">收入</string>
    <string name="outcome">支出</string>
    <string name="my_invitater">我的邀請人</string>
    <string name="share_persons">分享人數</string>
    <string name="active_real_auth">活躍實名</string>
    <string name="partner_persons">團隊人數</string>
    <string name="patner_active">團隊活躍度</string>
    <string name="star_team">元宇宙星民星級</string>
    <string name="regist_time">註冊時間</string>
    <string name="notice_detail">公告詳情</string>
    <string name="notice_list">公告列表</string>
    <string name="team_level_reward_is">獎勵1臺<font color='#FF7171'>%1$s</font>探測器+元宇宙數字生態會員手續費%2$d%%獎勵</string>
    <string name="no_team_level">暫無星級</string>
    <string name="team_level_desc_is">1.分享實名%1$d人\\n2.團隊活躍度%2$d點</string>
    <string name="regist_time_is">註冊時間：</string>
    <string name="last_mine_time_is">最近探测時間：</string>
    <string name="share_persons_is">分享人數：</string>
    <string name="active_real_auth_is">活躍實名：</string>
    <string name="partner_persons_is">團隊人數：</string>
    <string name="patner_active_is">團隊活躍度：</string>
    <string name="activity">活躍</string>
    <string name="real_name">实名</string>
    <string name="do_task">去完成</string>
    <string name="task_done">已完成</string>
    <string name="task_done_info">每日獎勵上限%1$d次，已完成%2$d/%3$d</string>
    <string name="is_which_one">我是第%d位</string>
    <string name="alaer_digital_person">元宇宙數字生態會員</string>
    <string name="invitate_code_is">邀請碼：%s</string>
    <string name="balance_is">餘額：%s</string>
    <string name="activity_is">活跃度：%s</string>
    <string name="exchange_build_score">元宇宙資產兌換</string>
    <string name="sure_to_exchange">確認兌換</string>
    <string name="exchange_fruit_number">兌換元宇礦石數量</string>
    <string name="pls_input_exchange_number">請輸入需要兌換的元宇礦石數量</string>
    <string name="input_number">請輸入數量</string>
    <string name="exchange_all">全部兌換</string>
    <string name="total_score_is">功分总数：%s 功分</string>
    <string name="total_fruit_is">元宇礦石總數：%s元宇礦石</string>
    <string name="payment_proportion">缴纳手續費占比：%d%%</string>
    <string name="exchange_detail">兌換詳情</string>
    <string name="arrival_timely">即时到账</string>
    <string name="exchange_number">兌換數量：</string>
    <string name="fruit_number_is">%s元宇礦石</string>
    <string name="get_score_number_is">可得功分：</string>
    <string name="score_number_is_about">約%s功分</string>
    <string name="fruit_number_is_about">約%s元宇礦石</string>
    <string name="fund_is">繳納手續費：</string>
    <string name="inviter_info">邀請人資訊</string>
    <string name="second_pwd">兌換密碼</string>
    <string name="second_pwd_set">兌換密碼設定</string>
    <string name="pls_make_not_same_with_second_pwd">請不要和兌換密碼一致</string>
    <string name="name_and_id">登記姓名和證件號</string>
    <string name="input_follow_infos_to_verify">請填寫下列資訊並完成認證</string>
    <string name="name_from">姓名(身份證、護照上的姓名)</string>
    <string name="id_no_from">證件號(身份證、護照上的號碼)</string>
    <string name="input_name">請輸入姓名</string>
    <string name="input_license">請輸入證件號</string>
    <string name="verify_to_get_detector">實名認證將通過支付寶支付功能進行確認，支付成功後將獲得一台新手探測器</string>
    <string name="auth_paypal">PayPal認證</string>
    <string name="auth_card">用戶證件認證</string>
    <string name="auth_credit">信用卡認證</string>
</resources>