<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="llc.metaversenetwork.app.base.BindClickListener" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.user.LoginFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="43dp"
            android:text="@string/welcome_to_digital_alaer"
            android:textColor="@color/font_41"
            android:textSize="@dimen/font_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="78dp"
            android:text="@string/account_3D_login_directly"
            android:textColor="@color/font_7E"
            android:textSize="@dimen/font_12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="132dp"
            android:text="@string/phone_no"
            android:textColor="@color/font_41"
            android:textSize="@dimen/font_17" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="163dp"
            android:layout_marginRight="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/region"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:drawableRight="@drawable/ic_arrow_down"
                android:drawablePadding="4dp"
                android:onClick="@{handler.click}"
                android:text="+86"
                android:textColor="@color/font_41"
                android:textSize="@dimen/font_16" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="6dp"
                android:background="#D8D8D8" />

            <EditText
                android:id="@+id/etPhone"
                style="@style/AccountEditText"
                android:layout_marginLeft="16dp"
                android:hint="@string/pls_input_phone"
                android:inputType="number" />

        </LinearLayout>

        <View
            style="@style/LineAccountGray"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="191dp"
            android:layout_marginRight="47dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="217dp"
            android:text="@string/password"
            android:textColor="@color/font_41"
            android:textSize="@dimen/font_17" />

        <EditText
            android:id="@+id/etPwd"
            style="@style/AccountEditText"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="248dp"
            android:layout_marginRight="47dp"
            android:hint="@string/pls_input_pwd_short"
            android:inputType="textPassword"
            android:maxLength="16" />

        <View
            style="@style/LineAccountGray"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="277dp"
            android:layout_marginRight="47dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            style="@style/BtnGreen"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="314dp"
            android:layout_marginRight="38dp"
            android:enabled="false"
            android:onClick="@{handler.click}"
            android:text="@string/enter" />

        <TextView
            android:id="@+id/toRegist"
            style="@style/AccountGreenText"
            android:layout_marginLeft="87dp"
            android:layout_marginTop="388dp"
            android:clickable="true"
            android:onClick="@{handler.click}"
            android:text="@string/regist_account" />

        <TextView
            android:id="@+id/forgetPwd"
            style="@style/AccountGreenText"
            android:layout_alignParentRight="true"
            android:layout_marginTop="388dp"
            android:layout_marginRight="87dp"
            android:onClick="@{handler.click}"
            android:text="@string/forget_pwd" />

    </RelativeLayout>

</layout>