<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handler"
            type="llc.metaversenetwork.app.base.BindClickListener" />
    </data>

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_auth"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".ui.government.RealNameAuthActivity">

        <include layout="@layout/layout_title_bar_white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="18dp"
            android:paddingTop="20dp"
            android:paddingRight="18dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="38dp"
                android:text="@string/real_name_auth"
                android:textColor="@color/white"
                android:textSize="@dimen/font_19" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="38dp"
                android:layout_marginTop="6dp"
                android:text="@string/make_sure_security_warning"
                android:textColor="@color/white"
                android:textSize="@dimen/font_12" />

            <llc.metaversenetwork.app.view.ItemLayoutView
                android:id="@+id/authCard"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_marginTop="20dp"
                android:onClick="@{handler.click}"
                app:icon="@drawable/ic_card_auth"
                app:title="@string/auth_card" />

            <llc.metaversenetwork.app.view.ItemLayoutView
                android:id="@+id/authPayPal"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_marginTop="20dp"
                android:onClick="@{handler.click}"
                app:icon="@drawable/ic_paypal"
                app:title="@string/auth_paypal" />


            <llc.metaversenetwork.app.view.ItemLayoutView
                android:id="@+id/authVisa"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_marginTop="20dp"
                android:onClick="@{handler.click}"
                app:icon="@drawable/ic_visa"
                app:title="@string/auth_credit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/real_name_auth_waning"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14" />

        </LinearLayout>

    </LinearLayout>

</layout>